--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,8 +3,12 @@ name: Run Bicep Function Tests
 on:
   push:
     branches: [ main, master ]
+    paths-ignore:
+      - 'examples/ignored/**'
   pull_request:
     branches: [ main, master ]
+    paths-ignore:
+      - 'examples/ignored/**'
   workflow_dispatch:
 
 permissions:
