feat: Implement Bicep function unit testing framework
- Remove legacy test template file.
- Add Azure DevOps pipeline configuration for running tests on Linux, Windows, and macOS.
- Introduce helper scripts for obtaining expected outputs from Bicep expressions.
- Create a comprehensive test runner script for executing Bicep function tests.
- Add example test files demonstrating various assertion types and test formats.
- Include tests for array operations, custom functions, and complex function scenarios.
- Organize tests into a structured format with descriptions and expected outputs.
- Move certain failing test examples to an ignored folder for clarity.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches: [ main, master ]
     paths-ignore:
-      - 'examples/ignored/**'
+      - 'tests/ignored/**'
   pull_request:
     branches: [ main, master ]
     paths-ignore:
-      - 'examples/ignored/**'
+      - 'tests/ignored/**'
   workflow_dispatch:
 
 permissions:
@@ -33,8 +33,8 @@ jobs:
     
     - name: Run tests (Bash)
       run: |
-        chmod +x ./run-tests.sh
-        ./run-tests.sh -v
+        chmod +x ./framework/run-tests.sh
+        ./framework/run-tests.sh -v
       
   test-windows:
     name: Test on Windows
@@ -58,7 +58,7 @@ jobs:
     - name: Run tests (PowerShell)
       run: |
         $env:PATH = "C:\bicep;$env:PATH"
-        pwsh ./run-tests.ps1 -VerboseOutput
+        pwsh ./framework/run-tests.ps1 -VerboseOutput
       shell: pwsh
 
   test-macos:
@@ -78,5 +78,5 @@ jobs:
     
     - name: Run tests (Bash)
       run: |
-        chmod +x ./run-tests.sh
-        ./run-tests.sh -v
+        chmod +x ./framework/run-tests.sh
+        ./framework/run-tests.sh -v
