--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -86,20 +86,36 @@ jobs:
       shell: pwsh
       run: |
         $content = Get-Content -Raw -Path test_output.txt
-        if ($content -match 'Failed:\s+([0-9]+)') {
-            $failures = [int]$matches[1]
+        $failures = $null
+
+        # Try robust regex match first
+        $m = [regex]::Match($content, 'Failed:\s*(\d+)', [System.Text.RegularExpressions.RegexOptions]::IgnoreCase)
+        if ($m.Success) {
+          $failures = [int]$m.Groups[1].Value
         } else {
-            Write-Error 'Could not determine failure count from test output'
-            exit 1
+          # Fallback: scan lines for a 'Failed' entry and extract digits
+          $lines = $content -split "\r?\n"
+          foreach ($line in $lines) {
+            if ($line -match 'Failed[:\s]*([0-9]+)') {
+              $failures = [int]$matches[1]
+              break
+            }
+          }
         }
+
+        if ($null -eq $failures) {
+          Write-Error 'Could not determine failure count from test output'
+          exit 1
+        }
+
         Write-Host "Failures=$failures"
         if ($failures -eq 11) {
-            Write-Host 'Exactly 11 failures — treating job as success'
-            exit 0
+          Write-Host 'Exactly 11 failures — treating job as success'
+          exit 0
         }
         if ($failures -gt 0) {
-            Write-Error "Unexpected failure count: $failures; failing job"
-            exit 1
+          Write-Error "Unexpected failure count: $failures; failing job"
+          exit 1
         }
         exit 0
 
