feat: Enable parallel test execution in CI workflows

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Run tests
         shell: pwsh
         run: |
-          ./framework/run-tests.ps1 -VerboseOutput
+          ./framework/run-tests.ps1 -Parallel -VerboseOutput
 
       - name: Create Release Tag
         run: |
