--- a/azure-devops/azure-pipelines.yml
+++ b/azure-devops/azure-pipelines.yml
@@ -33,9 +33,9 @@ jobs:
       bicep --version
     displayName: 'Install Bicep CLI'
 
-  - bash: |
-      chmod +x ./framework/run-tests.sh
-      ./framework/run-tests.sh -v
+  - pwsh: |
+      $env:PATH = "/usr/local/bin:$env:PATH"
+      ./framework/run-tests.ps1 -Parallel -VerboseOutput
     displayName: 'Run Bicep function tests (framework)'
 
   - task: PublishTestResults@2
