Add comprehensive documentation for Bicep Unit Testing framework
- Created index.md for main documentation overview and navigation
- Added quick-start.md for installation and running initial tests
- Introduced script-parameters.md detailing command-line options for test runner
- Developed test-files.md providing an overview of test file structure and organization
- Specified test-json-format.md outlining the technical format for test files

--- a/.github/workflows/test-linux-strict.yml.example
+++ b/.github/workflows/test-linux-strict.yml.example
@@ -30,4 +30,4 @@ jobs:
         shell: pwsh
         run: |
           $env:PATH = "/usr/local/bin:$env:PATH"
-          ./framework/run-tests.ps1 -Parallel -VerboseOutput
+          ./run-tests.ps1 -Parallel
