--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,12 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Create Release Branch
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git checkout -b release/${{ github.event.inputs.increment }}
+
       - name: Install GitVersion
         uses: gittools/actions/gitversion/setup@v1.1.1
         with:
