--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,12 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git checkout -b release/${{ github.event.inputs.increment }}
 
+      - name: Update GitVersion Config
+        run: |
+          $increment = "${{ github.event.inputs.increment }}"
+          $increment = [char]::ToUpper($increment[0]) + $increment.Substring(1)
+          (Get-Content GitVersion.yml) -replace "increment: Major", "increment: $increment" | Set-Content GitVersion.yml
+
       - name: Install GitVersion
         uses: gittools/actions/gitversion/setup@v1.1.1
         with:
