--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,19 +32,6 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Create Release Branch
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git checkout -b release/${{ github.event.inputs.increment }}
-
-      - name: Update GitVersion Config
-        shell: pwsh
-        run: |
-          $increment = "${{ github.event.inputs.increment }}"
-          $increment = [char]::ToUpper($increment[0]) + $increment.Substring(1)
-          (Get-Content GitVersion.yml) -replace "increment: Major", "increment: $increment" | Set-Content GitVersion.yml
-
       - name: Install GitVersion
         uses: gittools/actions/gitversion/setup@v1.1.1
         with:
@@ -55,6 +42,7 @@ jobs:
         uses: gittools/actions/gitversion/execute@v1.1.1
         with:
           useConfigFile: true
+          additionalArguments: '/overrideconfig increment=${{ github.event.inputs.increment || ''Minor'' }}'
 
       - name: Display GitVersion outputs
         run: |
