--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -5,10 +5,9 @@ branches:
     regex: ^main$|^master$
     mode: ContinuousDelivery
     tag: ''
-    increment: None
-    prevent-increment-of-merged-branch-version: true
-    track-merge-target: false
+    increment: Inherit
     is-mainline: true
+    is-release-branch: true
   release:
     regex: ^releases?[/-]
     mode: ContinuousDelivery
