fix: Correct version increment options and default value casing in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,12 +6,12 @@ on:
       increment:
         description: 'Version increment type'
         required: true
-        default: 'minor'
+        default: 'Minor'
         type: choice
         options:
-          - major
-          - minor
-          - patch
+          - Major
+          - Minor
+          - Patch
   push:
     branches:
       - 'release/**'
