fix: Change increment option for main branch from Inherit to None in GitVersion config

--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -5,7 +5,7 @@ branches:
     regex: ^main$|^master$
     mode: ContinuousDelivery
     tag: ''
-    increment: Inherit
+    increment: None
     is-mainline: true
     is-release-branch: true
   release:
