--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -35,70 +35,42 @@ jobs:
       - name: Run PSScriptAnalyzer
         shell: pwsh
         run: |
-          $results = Invoke-ScriptAnalyzer -Path ./framework -Recurse -ReportSummary -EnableExit
+          $results = Invoke-ScriptAnalyzer -Path ./framework -Recurse
           
           if ($results) {
-            Write-Host "PSScriptAnalyzer found issues:" -ForegroundColor Red
-            $results | Format-Table -AutoSize
+            Write-Host "::error::PSScriptAnalyzer found $(($results | Measure-Object).Count) issue(s)"
+            $results | ForEach-Object {
+              Write-Host "::error file=$($_.ScriptPath),line=$($_.Line),col=$($_.Column)::$($_.RuleName): $($_.Message)"
+            }
             exit 1
           } else {
-            Write-Host "PSScriptAnalyzer: No issues found!" -ForegroundColor Green
-          }
-
-      - name: Run PSScriptAnalyzer with SARIF output
-        if: always()
-        shell: pwsh
-        run: |
-          $sarifPath = "psscriptanalyzer-results.sarif"
-          Invoke-ScriptAnalyzer -Path ./framework -Recurse -Settings PSGallery -SaveAs "sarif" -ReportSummary | Out-File -FilePath $sarifPath
-          
-          # Check if SARIF file was created and has content
-          if (Test-Path $sarifPath) {
-            $content = Get-Content $sarifPath -Raw
-            if ([string]::IsNullOrWhiteSpace($content)) {
-              # Create minimal valid SARIF if empty
-              @{
-                version = "2.1.0"
-                '$schema' = "https://raw.githubusercontent.com/oasis-tcs/sarif-spec/master/Schemata/sarif-schema-2.1.0.json"
-                runs = @(@{
-                  tool = @{
-                    driver = @{
-                      name = "PSScriptAnalyzer"
-                      version = "1.0.0"
-                    }
-                  }
-                  results = @()
-                })
-              } | ConvertTo-Json -Depth 10 | Out-File -FilePath $sarifPath
-            }
+            Write-Host "::notice::PSScriptAnalyzer: No issues found!"
           }
 
       - name: Upload SARIF results
         if: always()
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@v4
         with:
           sarif_file: psscriptanalyzer-results.sarif
           category: psscriptanalyzer
+        continue-on-error: true
 
   semgrep:
     name: Semgrep Security Scan
     runs-on: ubuntu-latest
+    container:
+      image: semgrep/semgrep
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Run Semgrep
-        uses: semgrep/semgrep-action@v1
-        with:
-          config: >-
-            p/security-audit
-            p/command-injection
-            p/insecure-transport
+        run: semgrep scan --config=auto --sarif --output=semgrep.sarif ./framework || true
 
       - name: Upload Semgrep SARIF
         if: always()
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@v4
         with:
           sarif_file: semgrep.sarif
           category: semgrep
