--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -15,7 +15,6 @@ on:
 
 permissions:
   contents: read
-  security-events: write  # For Semgrep SARIF upload
 
 jobs:
   psscriptanalyzer:
@@ -47,40 +46,16 @@ jobs:
             Write-Host "::notice::PSScriptAnalyzer: No issues found!"
           }
 
-  semgrep:
-    name: Semgrep Security Scan
-    runs-on: ubuntu-latest
-    container:
-      image: semgrep/semgrep
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Run Semgrep with multiple rulesets
-        run: semgrep scan --config=auto --config=p/security-audit --config=p/best-practices --config=p/owasp-top-ten --config=p/cwe-top-25 ./framework || true
-
-      - name: Generate SARIF for GitHub Security tab
-        if: always()
-        run: semgrep scan --config=auto --config=p/security-audit --config=p/best-practices --config=p/owasp-top-ten --config=p/cwe-top-25 --sarif --output=semgrep.sarif ./framework || true
-
-      - name: Upload Semgrep SARIF
-        if: always()
-        uses: github/codeql-action/upload-sarif@v4
-        with:
-          sarif_file: semgrep.sarif
-          category: semgrep
-
   summary:
     name: Quality Check Summary
     runs-on: ubuntu-latest
-    needs: [psscriptanalyzer, semgrep]
+    needs: [psscriptanalyzer]
     if: always()
 
     steps:
       - name: Check results
         run: |
-          if [[ "${{ needs.psscriptanalyzer.result }}" == "failure" ]] || [[ "${{ needs.semgrep.result }}" == "failure" ]]; then
+          if [[ "${{ needs.psscriptanalyzer.result }}" == "failure" ]]; then
             echo "❌ Code quality checks failed"
             exit 1
           else
